<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/appbar_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <EditText
            android:id="@+id/car_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_shape"
            android:textColor="@color/quantum_grey700"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/assist_car_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/car_make"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/car_name"
            app:layout_constraintTop_toBottomOf="@id/car_name" />

        <EditText
            android:id="@+id/license_plate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_shape"
            android:textColor="@color/quantum_grey700"
            app:layout_constraintTop_toBottomOf="@id/car_name" />

        <TextView
            android:id="@+id/assist_license_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/license_plate"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/license_plate"
            app:layout_constraintTop_toBottomOf="@id/license_plate" />

        <EditText
            android:id="@+id/car_owner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/edit_text_shape"
            android:textColor="@color/quantum_grey700"
            app:layout_constraintTop_toBottomOf="@id/license_plate" />

        <TextView
            android:id="@+id/assist_car_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text="@string/car_owner"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/car_owner"
            app:layout_constraintTop_toBottomOf="@id/car_owner" />

        <Button
            android:id="@+id/car_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/save_car"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/car_owner" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>